--- a/FinalProject/wwwroot/css/style.css
+++ b/FinalProject/wwwroot/css/style.css
@@ -44,3 +44,28 @@ canvas {
     background-color: black; /* Fondo negro para el canvas */
     cursor: pointer;
 }
+
+
+#checkButton, #submitButton {
+    background-color: #333;
+    color: white;
+    border: 2px solid #444;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 10px;
+    transition: all 0.3s;
+}
+
+    #checkButton:hover, #submitButton:hover {
+        color: #0f0;
+        box-shadow: 0 0 10px #0f0, 0 0 20px #0f0, 0 0 30px #0f0;
+        border-color: #0f0;
+    }
+
+#score {
+    font-size: 24px;
+    margin-top: 10px;
+}
